manifests/vaultwarden/middleware-fail2ban-vaultwarden.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: fail2ban-vaultwarden
  namespace: vaultwarden
spec:
  plugin:
    fail2ban:
      rules:
        statuscode: "401-403"
        maxretry: 3
        findtime: 4h
        bantime: 4h
        enabled: "true"
