manifests/vaultwarden/middleware-redirect-https.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: vaultwarden-redirect-https
  namespace: vaultwarden
spec:
  redirectScheme:
    scheme: https
    permanent: true
