manifests/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
  labels:
    app: vaultwarden
  annotations:
    external-dns.kubernetes.io/hostname: passwords.yornik.eu
    external-dns.kubernetes.io/target: jump.fedishark.eu
    external-dns.kubernetes.io/ttl: "3600"
spec:
  selector:
    app: vaultwarden
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
