manifests/vaultwarden/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`passwords.yornik.eu`)
      kind: Rule
      middlewares:
        - name: vaultwarden-hsts
          namespace: vaultwarden
        - name: fail2ban-vaultwarden
          namespace: vaultwarden
        - name: no-compression
          namespace: traefik
        - name: rate-limit
          namespace: traefik
      services:
        - name: vaultwarden
          port: 80
  tls:
    certResolver: letsencrypt
